--- a/littleproxy.properties
+++ b/littleproxy.properties
@@ -3,4 +3,6 @@ jmx=false
 # Idle connections are disconnected after X seconds of inactivity
 idle_connection_timeout=70
 # only record request/response data for domain
-domains_require_recording="*.gmei.com,*.gengmei.cc"
+domains_require_recording=.*gmei.com,.*gengmei.cc
+# port
+port=8080
