--- a/littleproxy.properties
+++ b/littleproxy.properties
@@ -1,8 +1,16 @@
 # Exposes proxy connection properties via JMX.
 jmx=false
+
 # Idle connections are disconnected after X seconds of inactivity
 idle_connection_timeout=70
+
 # only record request/response data for domain
 domains_require_recording=.*gmei.com,.*gengmei.cc
+
 # port
 port=8080
+
+# mongodb settings
+mongodb_servers=localhost:27017
+mongodb_dbname=littleproxy
+mongodb_colname=records
